--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-group = 'fr'
-version = '1.1'
+group = 'fr.simplegravitygun'
+version = '1.2'
 
 repositories {
     mavenCentral()
@@ -45,3 +45,5 @@ processResources {
         expand props
     }
 }
+
+setLibsDirName("E:\\Servers\\1.19.4\\plugins")
