--- a/build.gradle
+++ b/build.gradle
@@ -31,19 +31,7 @@ java {
     }
 }
 
-tasks.withType(JavaCompile).configureEach {
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release = targetJavaVersion
-    }
-}
 
-processResources {
-    def props = [version: version]
-    inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
-    }
-}
+compileJava.options.encoding("UTF-8")
 
 setLibsDirName("E:\\Servers\\1.19.4\\plugins")
